discord icon okey

--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@ main {
     margin: 3rem 2rem;
 }
 
+.banner {
+    width: 100%;;
+}
+
 .text {
     margin: 1rem;
     border: 2rem;
@@ -49,8 +53,11 @@ main {
     border-color: rgba(240, 255, 255, 0);
 }
 
-img {
-    width: 100%;;
+.discord_cube {
+    width: 8rem;
+    position: absolute;
+    top: -65px;
+    left: 60px;
 }
 
 #sigmar_font {
@@ -65,7 +72,7 @@ img {
 
 .spasing {
     margin: 1rem 2rem;
-}
+} 
 
 .first_section {
     margin: 1rem;
